--- a/node/package.json
+++ b/node/package.json
@@ -8,11 +8,10 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
-    "@vtex/api": "6.45.12",
+    "@vtex/api": "6.45.15",
     "@vtex/test-tools": "^3.4.3",
     "@vtex/tsconfig": "^0.5.6",
-    "typescript": "3.9.7",
-    "vtex.service-example": "https://vini--ottermarketplace.myvtex.com/_v/private/typings/linked/v1/vtex.service-example@0.2.0+build1658595340/public/_types/react"
+    "typescript": "3.9.7"
   },
   "scripts": {
     "lint": "tsc --noEmit --pretty"
